rename identity tables

--- a/UserManangementWithIdentity/appsettings.json
+++ b/UserManangementWithIdentity/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-UserManangementWithIdentity-AC2C1B2D-D7CF-443E-B155-E4D9FF561B8D;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=DESKTOP-A67SHSR\\SQLEXPRESS;Database=UserManangementWithIdentity;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
